Prevent our textareas from overflowing their containers

--- a/clients/web/src/stylesheets/layout/global.styl
+++ b/clients/web/src/stylesheets/layout/global.styl
@@ -101,3 +101,6 @@ ul.dropdown-menu
   white-space pre
   word-wrap initial
   font-size 13px
+
+textarea
+  max-width 100%
